--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-lottie": "^1.2.3",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "swiper": "6.0.2",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
