--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
     "history": "^5.0.1",
     "node-sass": "4.14.1",
     "react": "^17.0.2",
-    "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^17.0.2",
     "react-lottie": "^1.2.3",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "react-scrollbars-custom": "^4.0.27",
     "swiper": "6.8.4",
     "web-vitals": "^1.0.1"
   },
