--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "node-sass": "4.14.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-input-mask": "^2.0.4",
     "react-lottie": "^1.2.3",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "react-scrollbars-custom": "^4.0.27",
+    "react-use": "^17.3.1",
     "swiper": "6.8.4",
     "web-vitals": "^1.0.1"
   },
